syntax = "proto3";

package profile;

option go_package = "https://github.com/go-park-mail-ru/2024_2_kotyari/api/protos/profile_grpc";

message ChangePasswordRequest{
  uint32 user_id = 1;
  string old_password = 2;
  string new_password = 3;
  string repeat_password = 4;
}
