syntax="proto3";

package profile;

option go_package = "https://github.com/go-park-mail-ru/2024_2_kotyari/api/protos/profile_grpc";

import "get_profile.proto";
import "update_profile_data.proto";
import "update_profile_avatar.proto";
import "change_password.proto";

import "google/protobuf/empty.proto";


service Profile {
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);

  rpc UpdateProfileData(UpdateProfileDataRequest) returns (google.protobuf.Empty);

  rpc UpdateProfileAvatar(UpdateAvatarRequest) returns (google.protobuf.Empty);

  rpc ChangePassword(ChangePasswordRequest) returns (google.protobuf.Empty);
}